--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
                         <li><a href="./pages/index2.html">Броня и костюмы</a></li>
                         <li><a href="./pages/index3.html">Оружие</a></li>
                         <li><a href="./pages/faq.html">FAQ</a></li>
-                        <li><a href="./pages/obvesy.html">Обвесы</a></li>
-                        <li><a href="./pages/mutants.html">Мутанты</a></li>
                         <li><a href="./pages/news.html">Статьи и гайды</a></li>
                     </ul>
                 </li>
@@ -64,12 +62,14 @@
     </nav>
 
     <!-- Герой-секция с видео и фолбэком -->
-    <section class="hero">
-        <video class="hero-video" autoplay muted loop playsinline>
-            <source src="./video/1080 (1).mp4" type="video/mp4">
+     <section class="hero">
+        <video class="hero-video" autoplay muted loop playsinline poster="./image/background.jpg">
+            <source src="./video/1080.mp4" type="video/mp4">
+            <source src="./video/1080.webm" type="video/webm">
+            Ваш браузер не поддерживает видео.
         </video>
         <div class="hero-overlay"></div>
-        <div class="grunge-overlay"></div> <!-- 👈 вставка -->
+        <div class="grunge-overlay"></div>
         <div class="hero-content">
             <h1>STALCUBE.WIKI</h1>
             <p>Полное руководство по игре, артефактам, оружию и тактикам выживания</p>
