--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 STALCUBE WIKI.               by spooler & CIDoRoViChev </p>
+                <p>&copy; 2025 STALCUBE WIKI.</p>
             </div>
         </div>
     </footer>
