--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <main class="main-content">
         <section class="features-section">
             <div class="section-header">
-                <h2>Статьи и гайды</h2>
+                <h2>Последние статьи и гайды</h2>
                 <p>Выберите интересующие вас статьи...</p>
             </div>
 
@@ -135,7 +135,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="./js/mainCards.js"></script>
 
     <script src="./js/script1.js"></script>
