--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="navbar">
-            <a href="#" class="logo">
+            <a href="../index.html" class="logo">
                 <span>STALCUBE.WIKI</span>
             </a>
             <ul class="nav-links">
