--- a/pages/index1.html
+++ b/pages/index1.html
@@ -16,7 +16,7 @@
     <!-- Остальное содержимое без изменений -->
     <nav>
         <div class="navbar">
-            <a href="#" class="logo">
+            <a href="../index.html" class="logo">
                 <span>STALCUBE.WIKI</span>
             </a>
             <ul class="nav-links">
