--- a/pages/faq.html
+++ b/pages/faq.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="navbar">
-            <a href="#" class="logo">
+            <a href="../index.html" class="logo">
                 <span>STALCUBE.WIKI</span>
             </a>
             <ul class="nav-links">
