--- a/pages/index1.html
+++ b/pages/index1.html
@@ -56,6 +56,10 @@
             <div class="category-tab" data-category="other">Другие</div>
         </div>
 
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Поиск по названию...">
+        </div>
+
         <div class="artifacts-grid-container">
             <div class="artifacts-grid" id="artifactsGrid">
                 <!-- Артефакты будут загружаться через JavaScript -->
