--- a/pages/index2.html
+++ b/pages/index2.html
@@ -50,6 +50,10 @@
             <div class="category-tab" data-category="Armor2">Научная броня</div>
             <div class="category-tab" data-category="Armor3">Комбинированная броня</div>
         </div>
+        
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Поиск по названию...">
+        </div>
 
         <div class="armor-grid-container">
             <div class="armor-grid" id="armorGrid">
