--- a/pages/index3.html
+++ b/pages/index3.html
@@ -53,6 +53,10 @@
             <div class="category-tab" data-category="pulemety">Пулеметы</div>
             <div class="category-tab" data-category="pp">Пистолеты-пулеметы</div>
         </div>
+        
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Поиск по названию...">
+        </div>
 
         <div class="weapon-grid-container">
             <div class="weapon-grid" id="weaponGrid">
