--- a/pages/srav.html
+++ b/pages/srav.html
@@ -118,21 +118,21 @@
     }
 
     .control-btn[data-hit-type="headshot"].active {
-      background: #FF6B35;
+      background: #5f2813;
       color: white;
-      border-color: #FF6B35;
+      border-color: #5f2813;
     }
 
     .control-btn[data-hit-type="bodyshot"].active {
-      background: #FF6B35;
+      background: #5f2813;
       color: white;
-      border-color: #FF6B35;
+      border-color: #5f2813;
     }
 
     .control-btn[data-hit-type="limbshot"].active {
-      background: #FF6B35;
+      background: #5f2813;
       color: white;
-      border-color: #FF6B35;
+      border-color: #5f2813;
     }
 
     .control-btn[data-metric="btk"].active {
