--- a/pages/news.html
+++ b/pages/news.html
@@ -44,11 +44,13 @@
 
     <main class="news-main">
         <section class="news-header">
-            <div class="container">
-                <h1>Статьи и гайды STALCUBE</h1>
-                <p>Все последние статьи и гайды игры</p>
-            </div>
-        </section>
+  <div class="container">
+    <h1>Статьи и гайды STALCUBE</h1>
+    <p>Все последние статьи и гайды игры</p>
+    <!-- 🔍 Поле поиска -->
+    <input type="text" id="searchInput" placeholder="Поиск по названию..." class="search-bar">
+  </div>
+</section>
 
         <section class="news-container">
             <div class="container">
