--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="./pages/index3.html">Оружие</a></li>
                     <li><a href="./pages/faq.html">FAQ</a></li>
                     <li><a href="./pages/news.html">Статьи и гайды</a></li>
+                    <li><a href="./pages/artbuilds.html"><i class="fas fa-chevron-right"></i> Сборки артефактов</a></li>
                 </ul>
             </li>
             <li class="dropdown">
