--- a/pages/srav.html
+++ b/pages/srav.html
@@ -312,6 +312,7 @@
                     <li><a href="./index3.html"><i class="fas fa-chevron-right"></i> Оружие</a></li>
                     <li><a href="./faq.html"><i class="fas fa-chevron-right"></i> FAQ</a></li>
                     <li><a href="./news.html"><i class="fas fa-chevron-right"></i> Статьи и гайды</a></li>
+                    <li><a href="./artbuilds.html"><i class="fas fa-chevron-right"></i> Сборки артефактов</a></li>
                 </ul>
             </li>
             <li class="dropdown">
