--- a/pages/artbuilds.html
+++ b/pages/artbuilds.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Остальное содержимое без изменений -->
-     <nav>
+   <nav>
     <div class="navbar">
         <a href="../index.html" class="logo">
             <span>STALCUBE.WIKI</span>
@@ -33,23 +33,27 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Разделы <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="./index1.html"><i class="fas fa-chevron-right"></i> Артефакты</a></li>
-                    <li><a href="./index2.html"><i class="fas fa-chevron-right"></i> Броня и костюмы</a></li>
-                    <li><a href="./index3.html"><i class="fas fa-chevron-right"></i> Оружие</a></li>
-                    <li><a href="./faq.html"><i class="fas fa-chevron-right"></i> FAQ</a></li>
-                    <li><a href="./news.html"><i class="fas fa-chevron-right"></i> Статьи и гайды</a></li>
+                    <li><a href="./index1.html"> Артефакты</a></li>
+                    <li><a href="./index2.html"> Броня и костюмы</a></li>
+                    <li><a href="./index3.html"> Оружие</a></li>
+                    <li><a href="./faq.html"> FAQ</a></li>
+                    <li><a href="./news.html"> Статьи и гайды</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Инструменты <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="https://cubecalc.ru/"><i class="fas fa-chevron-right"></i> Калькулятор сборок</a></li>
-                    <li><a href="https://cubemaps.ru/"><i class="fas fa-chevron-right"></i> Интерактивная карта</a></li>
-                    <li><a href="./srav.html"><i class="fas fa-chevron-right"></i> Сравнение предметов</a></li>
+                    <li><a href="https://cubecalc.ru/"> Калькулятор сборок</a></li>
+                    <li><a href="https://cubemaps.ru/"> Интерактивная карта</a></li>
+                    <li><a href="./srav.html"> Сравнение предметов</a></li>
                 </ul>
             </li>
         </ul>
     </div>
+    
+    <!-- Затемнение фона для мобильного меню -->
+    <div class="nav-overlay" id="navOverlay"></div>
+</nav>
     
     <!-- Затемнение фона для мобильного меню -->
     <div class="nav-overlay" id="navOverlay"></div>
