--- a/pages/index2.html
+++ b/pages/index2.html
@@ -30,19 +30,19 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Разделы <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="./index1.html"><i class="fas fa-chevron-right"></i> Артефакты</a></li>
-                    <li><a href="./index2.html"><i class="fas fa-chevron-right"></i> Броня и костюмы</a></li>
-                    <li><a href="./index3.html"><i class="fas fa-chevron-right"></i> Оружие</a></li>
-                    <li><a href="./faq.html"><i class="fas fa-chevron-right"></i> FAQ</a></li>
-                    <li><a href="./news.html"><i class="fas fa-chevron-right"></i> Статьи и гайды</a></li>
+                    <li><a href="./index1.html"> Артефакты</a></li>
+                    <li><a href="./index2.html"> Броня и костюмы</a></li>
+                    <li><a href="./index3.html"> Оружие</a></li>
+                    <li><a href="./faq.html"> FAQ</a></li>
+                    <li><a href="./news.html"> Статьи и гайды</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Инструменты <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="https://cubecalc.ru/"><i class="fas fa-chevron-right"></i> Калькулятор сборок</a></li>
-                    <li><a href="https://cubemaps.ru/"><i class="fas fa-chevron-right"></i> Интерактивная карта</a></li>
-                    <li><a href="./srav.html"><i class="fas fa-chevron-right"></i> Сравнение предметов</a></li>
+                    <li><a href="https://cubecalc.ru/"> Калькулятор сборок</a></li>
+                    <li><a href="https://cubemaps.ru/"> Интерактивная карта</a></li>
+                    <li><a href="./srav.html"> Сравнение предметов</a></li>
                 </ul>
             </li>
         </ul>
