--- a/pages/index3.html
+++ b/pages/index3.html
@@ -108,9 +108,9 @@
                 <div class="footer-column">
                     <h3>Навигация</h3>
                     <ul class="footer-links">
-                        <li><a href="./index.html"><i class="fas fa-chevron-right"></i> Главная</a></li>
-                        <li><a href="./pages/news.html"><i class="fas fa-chevron-right"></i> Статьи</a></li>
-                        <li><a href="./pages/srav.html"><i class="fas fa-chevron-right"></i> Сравнение предметов</a></li>
+                        <li><a href="../index.html"><i class="fas fa-chevron-right"></i> Главная</a></li>
+                        <li><a href="news.html"><i class="fas fa-chevron-right"></i> Статьи</a></li>
+                        <li><a href="srav.html"><i class="fas fa-chevron-right"></i> Сравнение предметов</a></li>
                     </ul>
                 </div>
                 
